Added a python module 'schooltool' and some tests.
The tests are bogus -- currently what they test is basically Apache running
on localhost.  In the future they will be refactored to functionally test
schooltool's HTTP server.

--- a/README
+++ b/README
@@ -12,6 +12,9 @@ Project structure
   README        this file
   test.py       unit test runner
 
+  schooltool/   Python module 'schooltool'
+    tests/      unit tests for the schooltool module
+
 Copyright information
 ---------------------
 
