--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 SchoolTool
 ==========
 
-SchoolTool - common information systems platform for school administration
+SchoolTool - common information systems platform for school administration.
 
 Website: http://www.schooltool.org/
 
